--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a href="https://www.instagram.com/singla2309/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/dhruv-singla-58756b208/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="Images/DHRUV_RESUME.pdf" download class="btn btn2">Download CV</a>
+                <a href="Images/DHRUV_RESUME (1).pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-rightt">
                 <form name="submit-to-google-sheet">
